# RealCity

./: .gitignore  BuildingButton.cs  BuildingUI.cs  CMakeLists.txt  CityButton.cs  CoalButton.cs  DebugLog.cs  EcnomicButton.cs  EcnomicUI.cs  FoodButton.cs  HumanUI.cs  Loader.cs  LumberButton.cs  MainDataStore.cs  Moreeconomic.cs  MoreeconomicUI.cs  PetrolButton.cs  PlayerBuildingButton.cs  PlayerbuildingUI.cs  Politics.cs  PoliticsButton.cs  PoliticsUI.cs  README.md  RealCity mode v0.2 introduction.docx  RealCity mode v0.2介绍.docx  RealCity mode v0.3 introduction.docx  RealCity mode v0.3介绍.docx  RealCity.cs  RealCity.csproj  RealCity.ruleset  RealCity.sln  RealCityButton.cs  RealCityCargoTruckAI.cs  RealCityCitizenManager.cs  RealCityCommericalBuildingAI.cs  RealCityCommonBuildingAI.cs  RealCityEconomyExtension.cs  RealCityEconomyManager.cs  RealCityExtractingFacilityAI.cs  RealCityGarbageTruckAI.cs  (+62 more)
Attributes/: ArrayLengthAttribute.cs
CustomAI/: RealCityBuildingAI.cs  RealCityCarAI.cs  RealCityCargoTruckAI.cs  RealCityCommercialBuildingAI.cs  RealCityCommericalBuildingAI.cs  RealCityCommonBuildingAI.cs  RealCityEconomyPanel.cs  RealCityExtractingFacilityAI.cs  RealCityGarbageTruckAI.cs  RealCityHumanAI.cs  RealCityIndustrialBuildingAI.cs  RealCityIndustrialExtractorAI.cs  RealCityIndustryBuildingAI.cs  RealCityMarketAI.cs  RealCityOfficeBuildingAI.cs  RealCityOutsideConnectionAI.cs  RealCityPassengerCarAI.cs  RealCityPlayerBuildingAI.cs  RealCityPrivateBuildingAI.cs  RealCityProcessingFacilityAI.cs  RealCityResidentAI.cs  RealCityTaxiAI.cs  RealCityTollBooth.cs  RealCityTouristAI.cs  RealCityVehicleAI.cs
CustomData/: BuildingData.cs  CitizenData.cs  CitizenUnitData.cs  CustomDistrictPark.cs  CustomTransportLine.cs  ICustomGameData.cs  PartyInterestData.cs  TransportLineData.cs  VehicleData.cs
CustomManager/: RealCityBuildingManager.cs  RealCityCitizenManager.cs  RealCityEconomyManager.cs  RealCityTransferManager.cs  RealCityVehicleManager.cs
Locales/: en.txt  zh.txt
Patch/: AuxiliaryBuildingAIGetResourceRatePatch.cs  BuildingAIVisitorEnterPatch.cs  BuildingManagerFindBuildingPatch.cs  CargoTruckAIArriveAtSourcePatch.cs  CargoTruckAIArriveAtTargetPatch.cs  CargoTruckAIReleaseVehiclePatch.cs  CargoTruckAISetSourcePatch.cs  CitizenManagerCreateCitizenInstancePatch.cs  CitizenManagerReleaseCitizenImplementationPatch.cs  CitizenManagerReleaseCitizenInstanceImplementationPatch.cs  CitizenManagerReleaseUnitCitizenPatch.cs  CitizenManagerSimulationStepImplPatch.cs  CommercialBuildingAICreateBuildingPatch.cs  CommercialBuildingAIModifyMaterialBufferPatch.cs  CommercialBuildingAISimulationStepActivePatch.cs  CommercialBuildingAIVisitorEnterPatch.cs  CommonBuildingAIGetColorPatch.cs  CommonBuildingAIReleaseBuildingPatch.cs  DistrictParkCalculatePolicyExpensesPatch.cs  DistrictParkCalculateVarsityExpensesPatch.cs  EconomyManagerAddPrivateIncomePatch.cs  EconomyManagerAddResourceItemClassPatch.cs  EconomyManagerAddResourcePatch.cs  EconomyManagerAddResourcePatch1.cs  EconomyManagerAddResourcePatchItemClassDetail.cs  EconomyManagerFetchResourcePatch.cs  EconomyManagerPeekResourcePatch.cs  EconomyPanelIncomeExpensesPollPatch.cs  ExtractingFacilityAIGetResourceRatePatch.cs  HumanAIEnterParkAreaPatch.cs  HumanAIEnterVehiclePatch.cs  HumanAISimulationStepPatch.cs  HumanAIStartMovingPatch.cs  IndustrialBuildingAICreateBuildingPatch.cs  IndustrialBuildingAIModifyMaterialBufferPatch.cs  IndustrialBuildingAISimulationStepActivePatch.cs  IndustrialExtractorAIModifyMaterialBufferPatch.cs  IndustrialExtractorAISimulationStepActivePatch.cs  IndustryBuildingExchangeResourcePatch.cs  IndustryBuildingGetResourcePricePatch.cs  (+31 more)
Properties/: AssemblyInfo.cs
RebalancedIndustries/: Mod.cs  README.md  RI_Data.cs  RI_Detours.cs
Resources/: en.txt  incompatible_mods.txt  ja.txt  ru.txt  zh-cn.txt  zh.txt
UI/: BuildingButton.cs  BuildingUI.cs  BusinessBuildingUI.cs  EcnomicButton.cs  EcnomicUI.cs  HumanUI.cs  IncompatibleModsPanel.cs  OptionUI.cs  PBLUI.cs  PlayerBuildingButton.cs  PlayerBuildingUI.cs  PoliticsButton.cs  PoliticsUI.cs  README.md  RealCityButton.cs  RealCityUI.cs  ResidentalBuildingUI.cs  TouristUI.cs
Util/: ArrayExtension.cs  CustomGameDataFactory.cs  DebugLog.cs  FastDelegateFactory.cs  HarmonyDetours.cs  Language.cs  Localization.cs  MainDataStore.cs  ModsCompatibilityChecker.cs  ObjectPrivateDataExtension.cs  Politics.cs  RedirectionHelper.cs  SaveAndRestore.cs  SpriteUtilities.cs
Util/Politic/: AbstractBill.cs  AbstractParty.cs  AbstractVoteResult.cs  Bill.cs  BillFactory.cs  Bills.cs  Election.cs  Government.cs  GovernmentalMeeting.cs  IBill.cs  IGovernment.cs  IGovernmentalMeeting.cs  IParty.cs  IVoteRusult.cs  ParliamentalVote.cs  Party.cs  PartyFactory.cs  PartyInterest.cs  PartyInterestCalc.cs  PartyInterestData.cs  Vote.cs  VoteResult.cs  VoteResult11.cs  bill-desc.txt  gov-desc.txt
Util/Politic/Bill/: ReduceBenefitBill.cs  ReduceCommercialTaxBill.cs  ReduceIndustryTaxBill.cs  ReduceResidentTaxBill.cs  RiseBenefitBill.cs  RiseCommercialTaxBill.cs  RiseIndustryTaxBill.cs  RiseResidentTaxBill.cs
Util/Politic/ElectionUtil/: ElectionInfo.cs  ElectionVoter.cs  PartyInterestCalc.cs
VSPROJ/: README.md  RealCity.csproj  RealCity.sln
中文攻略/: 入门.md  建成城市(自由玩法).md  村庄时代(准备进阶).md
